--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^16.3.1",
     "react-fontawesome": "^1.6.1",
     "react-particles-js": "^2.1.2",
+    "react-redux": "^7.0.3",
     "react-scripts": "1.1.4",
     "react-vertical-timeline-component": "^2.0.6",
+    "redux": "^4.0.1",
     "styled-components": "^3.2.5"
   },
   "scripts": {
